--- a/apps/portals/src/_ExploreMenu.scss
+++ b/apps/portals/src/_ExploreMenu.scss
@@ -36,7 +36,7 @@
     .title {
       font-size: 14px;
       text-align: center;
-      margin: 1rem;
+      padding: 1rem;
     }
 
     .nav.explore-nav {
